# spring-core-cpp

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: test-build.yml
include/funixproductions_core/: core.h
include/funixproductions_core/dto/: ApiDTO.h
include/funixproductions_core/dtos/: ApiDTO.h  PageDTO.h  PageDTO.tpp
include/funixproductions_core/exceptions/: ApiBadRequestException.h  ApiException.h  ApiForbiddenException.h  ApiNotFoundException.h  ApiUnauthorizedException.h
include/funixproductions_core/services/: ApiService.h  ApiService.tpp
src/dto/: ApiDTO.cpp  PageDTO.cpp
src/exceptions/: ApiBadRequestException.cpp  ApiException.cpp  ApiForbiddenException.cpp  ApiNotFoundException.cpp  ApiUnauthorizedException.cpp
src/services/: ApiService.cpp
tests/: CMakeLists.txt  funixproductions_core_tests.cpp
tests/dtos/: FunixBotUserExperienceDTO.cpp  FunixBotUserExperienceDTO.h
tests/services/: FunixBotUserExperienceService.cpp  FunixBotUserExperienceService.h
